@@ -18,7 +18,9 @@ AC_CONFIG_MACRO_DIR([config/m4])
 AM_INIT_AUTOMAKE(libpqxx, @PQXXVERSION@)
 
 PQXXVERSION=@PQXXVERSION@
+PQXX_ABI=@PQXX_ABI@
 AC_SUBST(PQXXVERSION)
+AC_SUBST(PQXX_ABI)
 
 AC_CONFIG_SRCDIR([src/connection.cxx])
 AC_CONFIG_HEADER([include/pqxx/config.h])
