@@ -21,10 +21,8 @@ libpqxx_la_SOURCES = binarystring.cxx \
 	transaction_base.cxx \
 	util.cxx
 
-# Uncomment to build an unversioned library (version in soname)
-libpqxx_version = -release $(PQXXVERSION)
-# Uncomment to build a versioned library
-#libpqxx_version = -version-info $(ABI_CURRENT):$(ABI_REVISION):$(ABI_AGE)
+libpqxx_version = -release $(PQXX_ABI)
+
 libpqxx_la_LDFLAGS = $(libpqxx_version) \
 	-rpath $(libdir) \
 	${POSTGRES_LIB}
