@@ -1,6 +1,7 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  autogen.sh:
  - Get ABI version as well as library version.
+ - Single "substitute" function for configure.ac and version header.
  doc/Doxyfile.in:
  - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
  include/pqxx/result.hxx, include/pqxx/util.hxx src/connection_base.cxx,
@@ -9,6 +10,8 @@
  - Should fix a case of mismatched allocation/deallocation.
  include/pqxx/version.hxx.template:
  - Include ABI version.
+ src/Makefile.am:
+ - Version according to ABI version, not full library version.
  tools/extract_version:
  - New --abi option to extract library ABI version.
  - New --help option.
